fix: Update application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-# DB 설정
+# DB ??
+spring.profiles.active=mysql
 
-# JPA 설정
+# JPA ??
 spring.jpa.hibernate.ddl-auto=none
 
-# 국제화(Internationalization) 설정
+# ???(Internationalization) ??
 spring.messages.basename=messages/messages
