--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
 	
 	runtimeOnly 'org.webjars:webjars-locator-core'
   	runtimeOnly "org.webjars.npm:bootstrap:${webjarsBootstrapVersion}"
